ecmascript/parser/tests/test262-error-references/fail/33cf50480671cfec.js.stderr
error: Unexpected token Some(RParen). Expected one of yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/33cf50480671cfec.js:1:15
  |
1 | try { } catch() {}
  |               ^

